<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.Register">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/button_gradient">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_gravity="bottom"
            android:gravity="center"
            android:layout_marginBottom="8dp"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/type_valid_username"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/username"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/xxxxxxxxxx"
            android:inputType="phone"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/phone"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_address"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/email"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textColor="@color/black"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:textSize="18sp"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/password"/>
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">
            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_gradient"
                android:id="@+id/childHealth"
                android:text="@string/register"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/button_gradient"
                android:id="@+id/cancel"
                android:text="@string/cancel"
                android:layout_margin="8dp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:textSize="20sp"/>
        </LinearLayout>
   </RelativeLayout>
</LinearLayout>