<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ui.LoginActivity"
    android:orientation="vertical"
    tools:deviceIds="wear">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/app_name"
        android:textSize="44sp"
        android:id="@+id/appName"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"
        android:background="@drawable/button_gradient"
        android:translationZ="1dp"
        android:gravity="center"
        android:textStyle="bold"
        android:fontFamily="@font/yellowtail"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@mipmap/family"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_info"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_margin="16dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:id="@+id/email"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textColor="@color/black"
        android:id="@+id/password"/>
    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_gradient"
        android:text="@string/login"
        android:id="@+id/login"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:layout_margin="64dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/forgetPassword"
            android:text="@string/forgit_password"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/or"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:textSize="14sp"
            android:gravity="center"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/register"
            android:text="@string/register"
            android:textStyle="bold"
            android:textColor="#ff0000"
            android:textSize="14sp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>