<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:textAlignment="center"
            android:text="@string/reset_password"
            android:textSize="16sp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatEditText
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/email"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/button_gradient"
            android:text="@string/reset"
            android:id="@+id/reset"
            android:textSize="16sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="4dp"/>
    </LinearLayout>
</RelativeLayout>