<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/toolbar"
                android:text="@string/app_name"
                android:background="@drawable/button_gradient"
                android:textSize="44sp"
                android:textColor="@color/white"
                android:translationZ="1dp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/yellowtail"/>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/getMore"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                app:civ_border_color="@color/black"
                app:civ_border_width="2dp"
                android:id="@+id/photo"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/user_name"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/username"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="43dp"
                    android:layout_marginStart="8dp"
                    android:layout_weight="1.5"
                    android:gravity="start"
                    android:text="@string/specialization"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/specialization"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/address"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/address"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/phone"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/phone"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/email_address"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/email"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1.5"
                    android:text="@string/whatsapp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="bold"/>
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textColor="@color/black"
                    android:id="@+id/whatsapp"
                    android:textSize="16sp"
                    android:layout_marginStart="8dp"
                    android:gravity="start"
                    android:textStyle="normal"/>
            </LinearLayout>

            <RatingBar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:id="@+id/rating"
                android:layout_marginTop="16dp"/>
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:background="@drawable/button_gradient"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:textStyle="bold"
                android:visibility="gone"
                android:textAllCaps="false"
                android:id="@+id/submit"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>




