<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        app:contentInsetEnd="0dp"
        android:background="@color/white"
        app:contentInsetStart="0dp"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:id="@+id/toolbar"
                android:text="@string/app_name"
                android:background="@color/colorAccent"
                android:textSize="44sp"
                android:textColor="@color/white"
                android:translationZ="1dp"
                android:gravity="center"
                android:textStyle="bold"
                android:fontFamily="@font/yellowtail"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/userPanel"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/filters"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold|italic"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <Spinner android:id="@+id/city"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"/>
                        <Spinner android:id="@+id/category"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"/>
                        <Spinner android:id="@+id/tag"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="4dp"/>
                </LinearLayout>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/transparent"
                    android:text="@string/search"
                    android:padding="8dp"
                    android:textSize="14sp"/>
            </LinearLayout>
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <com.dinuscxj.refresh.RecyclerRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/getMore"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:text="@string/no_results"
                android:fontFamily="@font/yellowtail"
                android:textSize="32sp"
                android:id="@+id/noResults"
                android:visibility="gone"/>


            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/content"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        </LinearLayout>
    </com.dinuscxj.refresh.RecyclerRefreshLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>

